multi-container/simple-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-app
spec:
  replicas: 2
  selector:
    matchLabels:
      component: simple-app
  template:
    metadata:
      labels:
        component: simple-app
    spec:
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: persistent-volume-claim
      containers:
        - name: simple-app
          image: kevinoliveira/simple-app
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: storage
              mountPath: /var/lib/postgresql/data  # Only for Postgres
              subPath: postgres  # Only for Postgres
